api's for hotel done
