# api/models/responses.go
@@ -4,6 +4,10 @@ type ResponseError struct {
 	Error string `json:"error"`
 }
 
+type ResponseId struct {
+	Message int64 `json:"message"`
+}
+
 type ResponseOK struct {
-	Message interface{} `json:"message"`
+	Message string `json:"message"`
 }
