# api/v1/handler.go
@@ -3,6 +3,7 @@ package v1
 import (
 	"errors"
 	"log"
+	"strconv"
 	"time"
 
 	"github.com/SaidovZohid/hotel-project/api/models"
@@ -10,6 +11,8 @@ import (
 	emailPkg "github.com/SaidovZohid/hotel-project/pkg/email"
 	"github.com/SaidovZohid/hotel-project/pkg/utils"
 	"github.com/SaidovZohid/hotel-project/storage"
+	"github.com/SaidovZohid/hotel-project/storage/repo"
+	"github.com/gin-gonic/gin"
 )
 
 const (
@@ -40,8 +43,8 @@ type HandlerV1 struct {
 
 func New(opt *HandlerV1) *handlerV1 {
 	return &handlerV1{
-		cfg:  opt.Cfg,
-		strg: opt.Strg,
+		cfg:      opt.Cfg,
+		strg:     opt.Strg,
 		inMemory: opt.InMemory,
 	}
 }
@@ -75,4 +78,65 @@ func (h *handlerV1) sendVerificationCode(key, email string) error {
 		log.Print("Failed to sent code to email")
 	}
 	return nil
+}
+
+func validateHotelParams(ctx *gin.Context) (*models.GetAllHotelsParams, error) {
+	var (
+		limit        int64 = 10
+		page         int64 = 1
+		num_of_rooms int64
+		err          error
+	)
+	if ctx.Query("limit") != "" {
+		limit, err = strconv.ParseInt(ctx.Query("limit"), 10, 64)
+		if err != nil {
+			return nil, err
+		}
+	}
+	if ctx.Query("page") != "" {
+		page, err = strconv.ParseInt(ctx.Query("page"), 10, 64)
+		if err != nil {
+			return nil, err
+		}
+	}
+	if ctx.Query("num_of_rooms") != "" {
+		num_of_rooms, err = strconv.ParseInt(ctx.Query("num_of_rooms"), 10, 64)
+		if err != nil {
+			return nil, err
+		}
+	}
+	return &models.GetAllHotelsParams{
+		Limit:      limit,
+		Page:       page,
+		Search:     ctx.Query("search"),
+		NumOfRooms: num_of_rooms,
+	}, nil
+}
+
+func getHotels(hotels *repo.GetAllHotels) models.GetAllHotels {
+	var res models.GetAllHotels
+	res.Hotels = make([]*models.GetHotelInfo, 0)
+	res.Count = hotels.Count
+	for _, hotel := range hotels.Hotels {
+		h := models.GetHotelInfo{
+			ID:          hotel.ID,
+			HotelName:   hotel.HotelName,
+			Description: hotel.Description,
+			Address:     hotel.Address,
+			ImageUrl:    hotel.ImageUrl,
+			NumOfRooms:  hotel.NumOfRooms,
+			ManagerID:   hotel.ManagerID,
+		}
+		for _, image := range hotel.Images {
+			i := models.HotelImage{
+				ID:             image.ID,
+				HotelID:        image.HotelID,
+				ImageUrl:       image.ImageUrl,
+				SequenceNumber: image.SequenceNumber,
+			}
+			h.Images = append(h.Images, &i)
+		}
+		res.Hotels = append(res.Hotels, &h)
+	}
+	return res
 }
